[project]
name = "bench-lab"
version = "0.0.0"
description = "Unified framework to evaluate LLMs, agents and RAG system."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.4.2",
    "mypy>=1.19.1",
    "numpy>=2.4.0",
    "prettytable>=3.17.0",
    "rich>=14.2.0",
    "ruff>=0.14.10",
    "types-pyyaml>=6.0.12.20250915",
]
